<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="35dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_listview"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_agregar_coche"
        android:textSize="14sp"
        android:paddingBottom="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="6dp">

        <EditText
            android:id="@+id/et_marca"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_marca"
            android:inputType="text"
            android:padding="8dp"
            android:layout_marginEnd="4dp"/>

        <EditText
            android:id="@+id/et_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_color"
            android:inputType="text"
            android:padding="8dp"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_agregar_coche"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_agregar_coche"
        android:layout_marginBottom="12dp"/>

    <ListView
        android:id="@+id/lv_empleados"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"/>

</LinearLayout>